[package]
name = "weather_station"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3"] }
log = { version = "0.4.20" }
esp-hal-embassy = { version = "0.8.1", features = ["esp32c3"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-40960"] }
embassy-futures = "0.1.1"
embassy-sync = "0.7.0"
embassy-time = "0.4.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
